/*
 * This file is part of the NUbots Codebase.
 *
 * The NUbots Codebase is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * The NUbots Codebase is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with the NUbots Codebase.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Copyright 2013 NUBots <nubots@nubots.net>
 */

package messages.input.proto;

message Sensors {

    enum ServoID {
        R_SHOULDER_PITCH    = 0;
        L_SHOULDER_PITCH    = 1;
        R_SHOULDER_ROLL     = 2;
        L_SHOULDER_ROLL     = 3;
        R_ELBOW             = 4;
        L_ELBOW             = 5;
        R_HIP_YAW           = 6;
        L_HIP_YAW           = 7;
        R_HIP_ROLL          = 8;
        L_HIP_ROLL          = 9;
        R_HIP_PITCH         = 10;
        L_HIP_PITCH         = 11;
        R_KNEE              = 12;
        L_KNEE              = 13;
        R_ANKLE_PITCH       = 14;
        L_ANKLE_PITCH       = 15;
        R_ANKLE_ROLL        = 16;
        L_ANKLE_ROLL        = 17;
        HEAD_PAN            = 18;
        HEAD_TILT           = 19;
    }

    message Servo {
        required uint32 error_flags = 1;

        required ServoID id = 2;

        optional bool enabled = 3;

        optional float p_gain = 4;
        optional float i_gain = 5;
        optional float d_gain = 6;

        optional float goal_position = 7;
        optional float goal_speed = 8;

        optional float present_position = 9;
        optional float present_speed = 10;

        optional float load = 11;
        optional float voltage = 12;
        optional float temperature = 13;
    }

    message Accelerometer {
        optional float x = 1;
        optional float y = 2;
        optional float z = 3;
    }

    message Gyroscope {
        optional float x = 1;
        optional float y = 2;
        optional float z = 3;
    }

    message Orientation {
        optional float xx = 1;
        optional float xy = 2;
        optional float xz = 3;
        optional float yx = 4;
        optional float yy = 5;
        optional float yz = 6;
        optional float zx = 7;
        optional float zy = 8;
        optional float zz = 9;
    }

    message FSR {
        optional float x = 1;
        optional float y = 2;
        optional float z = 3;
    }

    required int64 timestamp = 1;
    optional Accelerometer accelerometer = 2;
    optional Gyroscope gyroscope = 3;
    optional Orientation orientation = 4;
    optional FSR left_FSR = 5;
    optional FSR right_FSR = 6;
    repeated Servo servo = 7;
}

